--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,3 +1,17 @@
+@import "./font-awesome";
+@import "./layout";
+@import "./navbar";
+
 * {
     font-family: 'Roboto', sans-serif;
+}
+
+body, html {
+    margin: 0;
+    padding: 0;
+}
+
+#app {
+    width: 100vw;
+    height: 100vh;
 }
