--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -2,3 +2,7 @@ $sky: #caebf2;
 $carbon: #d9d9d9;
 $electric: #006eff;
 $neutral: #efefef;
+
+$primary: #42a5f5;
+$primary-hover: #2196f3;
+$primary-active: #2196f3;
