--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -4,5 +4,5 @@ $electric: #006eff;
 $neutral: #efefef;
 
 $primary: #42a5f5;
-$primary-hover: #2196f3;
-$primary-active: #0d47a1;
+$primary-select: #2196f3;
+$primary-dark: #0d47a1;
