add toolbar and test view

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,6 +1,7 @@
 @import "./layout";
 @import "./navbar";
 @import "./splitView";
+@import "./toolbar";
 
 * {
     font-family: 'Roboto', sans-serif;
