--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -1,8 +1,5 @@
-$sky: #caebf2;
 $carbon: #d9d9d9;
-$electric: #006eff;
 $neutral: #efefef;
-
 $primary: #42a5f5;
 $primary-select: #2196f3;
-$primary-dark: #0d47a1;
+$primary-toolbar: #0d47a1;
