--- a/src/scss/navbar.scss
+++ b/src/scss/navbar.scss
@@ -12,6 +12,7 @@
     height: 100%;
     overflow: hidden;
     background-color: $primary;
+    box-shadow: 0px 0px 4px rgba(black, 0.25);
     transition-duration: 0.25s;
     -webkit-transition-duration: 0.25s;
     &.open {
@@ -38,10 +39,11 @@
         }
     }
     & .icon {
+        display: flex;
         width: 44px;
         justify-content: center;
         font-size: 18px;
-        & * {
+        & i {
             align-self: center;
         }
     }
