--- a/src/scss/toolbar.scss
+++ b/src/scss/toolbar.scss
@@ -3,8 +3,11 @@
 .toolbar {
     display: flex;
     height: 44px;
-    background-color: white;
-    color: $primary-toolbar;
+    background-color: $primary-toolbar;
+    box-shadow: 0px 0px 2px rgba(black, 0.25);
+    color: white;
+    padding-left: 8px;
+    padding-right: 8px;
     & * {
         align-self: center;
     }
@@ -13,7 +16,9 @@
         font-size: 20px;
     }
     & button {
+        display: flex;
         width: 44px;
+        height: 44px;
         justify-content: center;
         font-size: 18px;
         outline: none;
@@ -21,7 +26,7 @@
         border: none;
         cursor: pointer;
         background-color: transparent;
-        color: $primary-toolbar;
+        color: white;
         & * {
             align-self: center;
         }
